2001-03-07  JP Rosevear  <jpr@ximian.com>

	* src/soup-core/soup-server.h: soup_server_init should be an
	extern function

2001-03-07  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-server.c (soup_server_set_global_auth): add
	allowable authentication types mask.
	(soup_server_set_method_auth): ditto. NOTE: This server auth stuff
	may be removed altogether, so don't rely on it.

	* src/soup-core/soup-server.h: added SoupServerAuthType, a mask of
	allowable authentication types. Make soup_server_init an extern
	declaration instead of a function pointer.

	* src/soup-core/soup-apache.c (soup_apache_read_request): move
	chunked data checking to here from soup_apache_handler.

2001-03-07  JP Rosevear  <jpr@ximian.com>

	* soupConf.sh.in: use configure.in vars for subst

	* configure.in: create variables for config script

	* Makefile.am: generate the soupConf.sh script in the makefile for
	proper substitution

2001-03-07  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-cgi.c: created. moved cgi-related request
	processing here. do not use it. completely broken.

	* src/soup-core/soup-apache.c: initial commit of Apache module
	handling, server registration should be performed in a
	soup_server_init function. Authorization handling still needs to
	be written.

	* src/soup-core/soup-server.c: cleaned up to have only generic
	server functions. removed extraneous unregister functions.
	(soup_server_set_global_auth): set the global server authorize
	function, to be called in the absence of a method-specific
	authorize function.
	(soup_server_set_method_auth): set per-method authorize function.

	* src/soup-core/soup-queue.c (soup_parse_headers): remove unneeded
	variables.

	* src/soup-core/soup-private.h: add SoupServerHandler,
	soup_server_get_handler(), and soup_server_authorize().

	* src/soup-wsdl/Makefile.am (INCLUDES): add WSDL_CFLAGS, to get
	-Werror.

	* src/soup-core/Makefile.am: add new libsoup-apache.so target.
