@@ -113,13 +113,22 @@ AC_SUBST(POPT_LIBS)
 CPPFLAGS=$save_CPPFLAGS
 LIBS=$save_LIBS
 
-# For proper var substitution in soupConf.sh
+# For proper var substitution in soupConf.sh and soup-apacheConf.sh
 SOUP_LIBDIR='-L${libdir}'
 SOUP_INCLUDEDIR=" -I${includedir} $GNET_CFLAGS $XML_CFLAGS"
 SOUP_LIBS="-lsoup $GNET_LIBS $XML_LIBS"
+
 AC_SUBST(SOUP_LIBDIR)
 AC_SUBST(SOUP_INCLUDEDIR)
 AC_SUBST(SOUP_LIBS)
+
+SOUP_APACHE_LIBDIR='-L${libdir}'
+SOUP_APACHE_INCLUDEDIR=" -I${includedir} $GNET_CFLAGS $XML_CFLAGS"
+SOUP_APACHE_LIBS="-lsoup -lsoup-apache $GNET_LIBS $XML_LIBS"
+
+AC_SUBST(SOUP_APACHE_LIBDIR)
+AC_SUBST(SOUP_APACHE_INCLUDEDIR)
+AC_SUBST(SOUP_APACHE_LIBS)
 
 # Need in.h and tcp.h for setting of TCP_NODELAY
 AC_CHECK_HEADERS(netinet/in.h netinet/tcp.h)
